fix align of players tooltip, fix players tooltip arrow

--- a/tablehockey.css
+++ b/tablehockey.css
@@ -247,48 +247,63 @@ button,
 }
 
 .team:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(245,245,245,.8);
+	content: '';
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background: rgba(245,245,245,.9);
 }
 
 .team.selected:before {
-    background: rgba(245,245,245,0);
+	background: rgba(245,245,245,0);
 }
 
 .team span {
-    opacity: 0;
-    position: absolute;
-    bottom: -60px;
-    left: -9999em;
-    z-index: 100;
-    background: #fff;
-    box-shadow: 0 1px 1px 0 rgba(0,0,0,.4);
-    border-radius: 3px;
-    white-space: nowrap;
-    padding: 0 5px;
-    transition: opacity .2s ease-out, bottom .2s ease-out;
+	opacity: 0;
+	position: absolute;
+	bottom: -60px;
+	left: -9999em;
+	z-index: 100;
+	background: #fff;
+	box-shadow: 0 1px 1px 0 rgba(0,0,0,.4);
+	border-radius: 3px;
+	white-space: nowrap;
+	padding: 0 5px;
+	transition: opacity .2s ease-out, bottom .2s ease-out;
+}
+
+.team-selector-container .team:last-child:hover span,
+.team-selector-container .team:nth-last-child(2):hover span,
+.team-selector-container .team:nth-last-child(3):hover span {
+	right: 40%;
+	left: auto;
+}
+
+.team-selector-container .team:last-child span:before,
+.team-selector-container .team:nth-last-child(2) span:before,
+.team-selector-container .team:nth-last-child(3) span:before {
+	left: auto;
+	right: 10px;
 }
 
 .team:hover span {
-    left: 50%;
-    opacity: 1;
-    bottom: -40px;
+	left: 40%;
+	opacity: 1;
+	bottom: -40px;
 }
 
 .team span:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    width: 0;
-    height: 0;
-    margin: -12px 0 0 -6px;
-    border: 6px solid transparent;
-    border-bottom-color: #fff;
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 10px;
+	width: 0;
+	height: 0;
+	margin: -12px 0 0 -6px;
+	border: 6px solid transparent;
+	border-bottom-color: #fff;
 }
 
 /* END OF TEAMS */
@@ -379,15 +394,6 @@ button,
 
 	#team-stats-container .flag-bg {
 		left: 0;
-	}
-
-	#team-stats-container .players {
-		padding: 0;
-		min-width: 28px;
-	}
-
-	#team-stats-container .player-names {
-		display: none;
 	}
 }
 
